recursion.cons.lessons.recursion.cons.Last.scala.error
last:6: error: not found: value length
	return l(length-1)
                 ^